Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-1948] BuildEngineImpl::reportCycle(): Assertion `!cycleList.empty()' failed. #800

Closed
ddunbar opened this issue Jun 30, 2016 · 2 comments
Assignees

Comments

@ddunbar
Copy link
Member

ddunbar commented Jun 30, 2016

Previous ID SR-1948
Radar None
Original Reporter @ddunbar
Type Bug
Status Closed
Resolution Done
Additional Detail from JIRA
Votes 0
Component/s llbuild
Labels Bug
Assignee @ddunbar
Priority Medium

md5: f3406f3335cedfa94c59c0ee3f2cf53e

Issue Description:

While building apple/swift-package-manager#456 on Linux, I regularly hit this crash in llbuild:

--- bootstrap: note: building stage1: /home/ddunbar/public/swift-project/build/Ninja-ReleaseAssert/llbuild-linux-x86_64/bin/swift-build-tool -f /home/ddunbar/public/swift-project/build/Ninja-ReleaseAss\
ert//swiftpm-linux-x86_64/.bootstrap/build.swift-build                                                                                                                                                    
swift-build-tool: /home/ddunbar/public/swift-project/llbuild/lib/Core/BuildEngine.cpp:948: void (anonymous namespace)::BuildEngineImpl::reportCycle(): Assertion `!cycleList.empty()' failed.             
0  swift-build-tool 0x00000000005205ee llvm::sys::PrintStackTrace(llvm::raw_ostream&) + 46                                                                                                                
1  swift-build-tool 0x0000000000521569                                                                                                                                                                    
2  swift-build-tool 0x0000000000521873                                                                                                                                                                    
3  libpthread.so.0  0x00007fe250691d10                                                                                                                                                                    
4  libc.so.6        0x00007fe24f847267 gsignal + 55                                                                                                                                                       
5  libc.so.6        0x00007fe24f848eca abort + 362                                                                                                                                                        
6  libc.so.6        0x00007fe24f84003d                                                                                                                                                                    
7  libc.so.6        0x00007fe24f8400f2                                                                                                                                                                    
8  swift-build-tool 0x00000000004f6960                                                                                                                                                                    
9  swift-build-tool 0x00000000004f4bec                                                                                                                                                                    
10 swift-build-tool 0x00000000004ec87d                                                                                                                                                                    
11 swift-build-tool 0x00000000004ec77b llbuild::core::BuildEngine::build(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&) + 43                                     
12 swift-build-tool 0x00000000004ccaa2                                                                                                                                                                    
13 swift-build-tool 0x00000000004cc913 llbuild::buildsystem::BuildSystem::build(llvm::StringRef) + 67                                                                                                     
14 swift-build-tool 0x00000000004a35cd llbuild::buildsystem::BuildSystemFrontend::build(llvm::StringRef) + 1405                                                                                           
15 swift-build-tool 0x00000000004a00f6                                                                                                                                                                    
16 swift-build-tool 0x000000000049fced main + 173                                                                                                                                                         
17 libc.so.6        0x00007fe24f832a40 __libc_start_main + 240                                                                                                                                            
18 swift-build-tool 0x000000000049fb69 _start + 41                                                                                                                                                        
--- bootstrap: error: build failed with exit status -6                                                                                                                                                    

I don't see any way this is actually triggered by the code change, I suspect either a race condition that is happening to be triggered.

@ddunbar
Copy link
Member Author

ddunbar commented Aug 3, 2016

Unfortunately, I haven't been able to reproduce this and it isn't really actionable without a way to reproduce.

@ddunbar
Copy link
Member Author

ddunbar commented Oct 16, 2016

Fixed here:

To github.com:apple/swift-llbuild.git
e563e2a..e6baec4 master -> master
ddunbar@ozzy-4:llbuild$ git log -1 --format=oneline
e6baec4 [Core] Fix a case where we could fail to detect a cycle.

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
@shahmishal shahmishal transferred this issue from apple/swift May 5, 2022
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Projects
None yet
Development

No branches or pull requests

1 participant