[Core] Fix a case where we could fail to detect a cycle.

- In rare circumstances (which unfortunately I have not been able to reduce a
   sensible test case for), we could get in a situation where we failed to
   detect a cycle, because we were not considering *all* of the scan records,
   just the ones accessible via a task.

 - https://bugs.swift.org/browse/SR-1948